# ann

./: CMakeLists.txt  README.md  ann.c  ann.h  comp_thread.c  comp_thread.h
func-test/: CMakeLists.txt  func_test.c  func_test.h  threaded_func_test.c  threaded_func_test_mnist.c
unit-test/: CMakeLists.txt  test.c  test.h  threaded_test.c
